# Case2

./: .gitignore  lv_conf.h  partitions.csv  platformio.ini
include/: http.h  lvgl_adapter.h  lvgl_file_adapter.h  page_base.h  pages_manager.h  utils.cpp  utils.h
lib/TFT_eSPI/: User_Setup.h
lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_ScreenButtons.c  ui_ScreenButtons.h  ui_ScreenPlayer.c  ui_ScreenPlayer.h  ui_font_Font15.c  ui_font_FontNotepad.c  ui_font_FontNotepad20.c  ui_font_FontTime36.c  ui_img_1156012293.c  ui_img_1676589243.c  ui_img_827955121.c  ui_img_853450402.c  ui_img_icon_back_png.c  ui_img_icon_cacl_png.c  ui_img_icon_noptepad_png.c  ui_img_icon_player_png.c
src/: app_event.h  common_pages.h  main.cpp
src/pages/buttons/: buttons_page.cpp  buttons_page.h
src/pages/keyboard/: keyboard_page.cpp  keyboard_page.h
src/pages/main/: main_page.cpp  main_page.h
src/pages/player/: player_page.cpp  player_page.h
src/pages/wifi/: wifi_page.cpp  wifi_page.h
